--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.7.2",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/stack": "^7.6.1",
     "expo": "~54.0.20",
+    "expo-camera": "^17.0.8",
+    "expo-image-picker": "^17.0.8",
+    "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.5.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-maps": "^1.26.18",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
