--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.1",
     "@react-navigation/stack": "^7.6.1",
     "expo": "~54.0.20",
     "expo-camera": "^17.0.8",
