Implement map view with location services
- Add location permissions for iOS and Android in app.json
- Implement React Native Maps in MapScreen:
  - Request and handle location permissions
  - Get user's current location
  - Center map on user location or default (San Miguel)
  - Show user's location on map
  - Recenter button to go back to user location
  - Floating "New Report" button
- Refine report categories:
  - Merge electrical categories into "Infraestructura Eléctrica"
  - Update "Propiedades Peligrosas" with better description
  - Reduce from 9 to 7 categories for better UX

Phase 3 (Map View) - Basic implementation completed

--- a/app.json
+++ b/app.json
@@ -12,8 +12,20 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "La app necesita tu ubicación para mostrar reportes cercanos y permitirte crear nuevos reportes."
+        }
+      ]
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "La app necesita tu ubicación para mostrar reportes cercanos y permitirte crear nuevos reportes.",
+        "NSLocationAlwaysUsageDescription": "La app necesita tu ubicación para mostrar reportes cercanos y permitirte crear nuevos reportes."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +33,16 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ],
+      "config": {
+        "googleMaps": {
+          "apiKey": ""
+        }
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
