Implement create report functionality
Features:
- Create NewReportScreen with full report creation flow
- Camera and gallery photo picker
- Category selector with visual grid
- Optional description and address fields
- Automatic GPS location capture
- Photo upload to Firebase Storage
- Report creation in Firestore
- Duplicate detection within 20m radius
- User confirmation prompt for nearby reports

Services:
- storage.ts: Upload photos to Firebase Storage
- reports.ts: Create reports, check duplicates, confirm reports, get all reports
  - Haversine formula for distance calculation
  - Firestore queries with geolocation filtering

Navigation:
- Add MainStack with NewReport modal screen
- Connect "Nuevo Reporte" button to navigation
- Update navigation types

Permissions:
- Add camera and photo library permissions (iOS)
- Add CAMERA, READ/WRITE storage permissions (Android)

Phase 4 (Create Report Flow) completed

--- a/app.json
+++ b/app.json
@@ -24,7 +24,9 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "La app necesita tu ubicación para mostrar reportes cercanos y permitirte crear nuevos reportes.",
-        "NSLocationAlwaysUsageDescription": "La app necesita tu ubicación para mostrar reportes cercanos y permitirte crear nuevos reportes."
+        "NSLocationAlwaysUsageDescription": "La app necesita tu ubicación para mostrar reportes cercanos y permitirte crear nuevos reportes.",
+        "NSCameraUsageDescription": "La app necesita acceso a la cámara para tomar fotos de los problemas que reportes.",
+        "NSPhotoLibraryUsageDescription": "La app necesita acceso a tus fotos para que puedas seleccionar imágenes de los problemas."
       }
     },
     "android": {
@@ -36,7 +38,10 @@
       "predictiveBackGestureEnabled": false,
       "permissions": [
         "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION"
+        "ACCESS_FINE_LOCATION",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
       ],
       "config": {
         "googleMaps": {
