--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^12.5.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.16.0"
