--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
     "firebase": "^12.5.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
